--- a/beamerthememinflat.sty
+++ b/beamerthememinflat.sty
@@ -495,10 +495,10 @@
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\setbeamertemplate{frametitle}
 	{
-		\vspace*{1em}
+		\vspace*{-0.7cm}
 		\hspace*{-3pt}\color{darkpurple}{\insertframetitle}
-		%    	\begin{beamercolorbox}[wd=.7\textwidth,ht=1pt]{purple bar}
-			%	    \end{beamercolorbox}%
+		    %	\begin{beamercolorbox}[wd=.7\textwidth,ht=1pt]{purple bar}
+		%	    \end{beamercolorbox}%
 	}
 	
 	\mode
