--- a/main.org
+++ b/main.org
@@ -1,11 +1,11 @@
-#+TITLE: Hidrocarbonetos
+#+TITLE: Reações Orgânicas
 #+AUTHOR: Fábio Lima
 #+DATE: 
 #+OPTIONS: H:2 toc:t num:t
 #+STARTUP:beamer
 #+LATEX_CLASS:beamer 
 #+LANGUAGE: en portuguese
-#+LATEX_CLASS_OPTIONS: [presentation,professionalfonts,smaller,aspectratio=169]
+#+LATEX_CLASS_OPTIONS: [presentation,professionalfonts,aspectratio=169]
 
 #+BEAMER_THEME: minflat
 
@@ -30,7 +30,7 @@
 
 
 
-#+INCLUDE: "QO/Fundamentos/Introducao.org"
+#+INCLUDE: "QO/ReacoesOrganicas/ReacoesOrganicasI.org"
 
 #+begin_comment
 https://www.ufsm.br/app/uploads/sites/413/2018/12/quimica_ii.pdf
